[project]
name = "calculuscalculator"
version = "0.1.0"
description = "A package that solves calculus expressions and renders video explanations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "latex2sympy2>=1.9.1",
    "manim>=0.19.0",
    "sympy>=1.14.0",
]

[project.scripts]
calculus-calculator = "calculuscalculator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calculuscalculator"]